# Acog

./: README.md
atk-training-tamil-helloworld/: pyproject.toml
atk-training-tamil-helloworld/atk_training_tamil_helloworld/: ex1.py  ex2.py
atk-training-tamil-p1/atk_training_tamil_p1/: a.processed  task_manager.py
git-playground/: .gitignore  README.md
git-playground/interns/ALIGNMENT/: README.md  dotmat.sh  msa.sh  pairwise_alignment.sh
git-playground/interns/Amani/page-miner/: page-miner.py  requirements.txt  titles.csv  titles.py  urls_input.txt
git-playground/interns/Ankeet/rosalind/: decor.py  file.txt  main.py  main_2.py
git-playground/interns/BLAST/: Local_BLAST.sh  README.md
git-playground/interns/ENTREZ/: README.md
git-playground/interns/ENTREZ/PubMed/: .history  output_CSV_file  pubmed.py
git-playground/interns/ENTREZ/genbank/: genbank.py  genbankinterface.py  read_result.py  requirements.txt  result.csv
git-playground/interns/Haripriya/: notebook.ipynb
git-playground/interns/Irum/rosalind/: .pgm1ver1.sh.swp  bashpg1.sh  bashpg2.sh  bashpg3.sh  bashpg4.sh  bashpg5.sh  outt.txt  pgm1.sh  program1.sh  rosalind_dna.txt  rosalind_fib.txt  rosalind_gc.txt  rosalind_revc.txt  rosalind_rna.txt
git-playground/interns/Rohit/: README.md
git-playground/interns/Rohit/Bash codes/: complement.sh  count.sh  gccontent.sh  gccontent_2.sh  reccurance.sh  reccurance2.sh  reccurance_method2.sh  transcription.sh
git-playground/interns/Rohit/Python codes/: count.py  dna.py  gc_content.py  rabitpairs.py  transcription.py
git-playground/interns/Rohit/experiment/: Final_count_output  add_final_output.sh  out  results  sample  test.sh  test3.sh  translation_large.sh
git-playground/interns/Tamil/python101/: Readme.txt
git-playground/interns/Tamil/python101_gitclone/: readme.txt
git-playground/interns/sirisha/: file1.txt
tamil-web-miner/modules/tamil-web-mining-utils/tamil-web-mining-utils/: titles.csv  (+1 more)
tech-coe/: .gitignore  Makefile  README.md
tech-coe/gists/fastapi-with-static/: Makefile  README.md  pyproject.toml
tech-coe/gists/fastapi-with-static/fastapi_with_static/: server.py
tech-coe/gists/fastapi-with-static/static/: index.html
tech-coe/gists/fastapi-with-static/static/js/: app.js
tech-coe/learning/Nitesh/atk-training-nitesh-helloworld/: .gitignore  README.md  pyproject.toml
tech-coe/learning/Nitesh/atk-training-nitesh-helloworld/atk_training_nitesh_helloworld/: __init__.py
tech-coe/learning/amani/atk-trainining-amani-q-basic/: README.md  config.yml  pyproject.toml
tech-coe/learning/amani/atk-trainining-amani-q-basic/atk_trainining_amani_q_basic/: PersistentQ.py  config.yml  consumer.py  manager.py  ops_console.py  parse_yaml.py  producer.py  template.html
tech-coe/learning/avnish/atk-training-avnish-helloworld/: .gitignore  README.md  pyproject.toml
tech-coe/learning/avnish/atk-training-avnish-helloworld/atk_training_avnish_helloworld/: main.py
tech-coe/learning/avnish/atk-training-avnish-wf-basic/: README.md  avnish_processed_file.txt  input.processed.txt  input.txt  pyproject.toml
tech-coe/learning/avnish/atk-training-avnish-wf-basic/atk_training_avnish_wf_basic/: commands.py  processing_functions.py
tech-coe/learning/rama/: README.md
tech-coe/learning/rama/atk-file-loader/: Makefile  README.md  pyproject.toml  test_file.py
tech-coe/learning/rama/atk-file-loader/atk_file_loader/: file_loader.py  main.py
tech-coe/learning/rama/atk-training-rama-q-basic/: README.md  pyproject.toml
tech-coe/learning/rama/python-cli-example/: README.md  pyproject.toml
tech-coe/learning/rama/python-cli-example/cli_example/: one_more_cli.py  simple_cli.py
tech-coe/learning/rama/python/atk-learning-rama-p1/: Makefile  README.md  pyproject.toml
tech-coe/learning/rama/python/atk-learning-rama-p1/atk_learning_rama_p1/: atk_function_loader_from_path.py  combine_functions_v1.py  hello_world.py  hello_world_commands.py  record_process_functions.py
tech-coe/learning/reetika/: README.md
tech-coe/learning/sirisha/atk-training-sirisha-q-basic/: README.md  pyproject.toml  python_app.py
tech-coe/learning/sirisha/atk-training-sirisha-q-basic/atk_training_sirisha_q_basic/: config.yml  consumer.py  manager.py  operations.py  parse_yaml.py  persitent_queue.py  producer.py  test.py  test2.py
tech-coe/learning/suganya/: processed_file.txt  sample_file.txt  sample_file.txt.processed
tech-coe/learning/suganya/atk-file-loader-example/: pyproject.toml
tech-coe/learning/suganya/atk-file-loader-example/atk_training_suganya_file_loader/: file_loader.py  main.py
tech-coe/learning/suganya/atk-file-loader-example/tests/: functions.py
tech-coe/learning/suganya/atk-streaming-iterator-example/: README.md  config.yaml  pyproject.toml
tech-coe/learning/suganya/atk-streaming-iterator-example/atk_training_suganya_streaming_iterator/: class_manager.py  execute_tasks.py  main.py  python_file_loader.py
tech-coe/learning/suganya/atk-streaming-iterator-example/tests/: functions.py
tech-coe/learning/suganya/atk-sug-test1/: pyproject.toml
tech-coe/learning/suganya/atk-sug-test1/atk_helloworld_caller/: helloworld_caller.py
tech-coe/learning/suganya/python-exercise/: README.md  config.yml  pyproject.toml
tech-coe/learning/suganya/python-exercise/atk_training_suganya_python_exercises/: atktraining_sugan_py1.py  commands.py  function_lookup.py  get_yaml_input.py  task_manager.py
tech-coe/learning/suganya/tech-training/: README.md  helloworld_caller.py  pyproject.toml
tech-coe/learning/suganya/tech-training/atk_suganya_helloworld/: helloworld.py
tech-coe/learning/tamil/atk-training-tamil-q-basic/: README.md  pyproject.toml
tech-coe/learning/tamil/atk-training-tamil-q-basic/atk_training_tamil_q_basic/: config.yaml  consumer.py  manager.py  ops.py  producer.py  sqlite3queue.py  web_page.py  yamlparser.py
tech-coe/learning/tamil/atk-training-tamil-q-basic/atk_training_tamil_q_basic/static/: styles.css
tech-coe/learning/tamil/atk-training-tamil-q-basic/atk_training_tamil_q_basic/templates/: display_data.html
tech-coe/tools/: README.md
(+41 files in other folders)
