[tool.poetry]
name = "atk-nitesh-helloworld"
version = "0.1.0"
description = ""
authors = ["Nitesh Kumar Gupta"]
readme = "README.md"
packages = [{include = "atk_nitesh_helloworld"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.7.0"


[[tool.poetry.source]]
name = "prod"
url = "https://pypi.aganitha.ai/"
default = false
secondary = true

[tool.poetry.scripts]
atk-nitesh-greet = "atk_nitesh_helloworld:main"


[[tool.poetry.source]]
name = "dev"
url = "https://dev-pypi.aganitha.ai/"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
