[tool.poetry]
name = "cli-example"
version = "0.1.0"
description = ""
authors = ["Ramarao Kanneganti <rama@agnitha.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
