[tool.poetry]
name = "atk-suganya-helloworld"
version = "0.1.0"
description = ""
authors = ["Suganya <suganya@aganitha.ai>"]
readme = "README.md"
packages = [{include = "atk_suganya_helloworld"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
